Issue #15508: Fix the docstring for __import__ to not mention negative 'level' values and set its document default value to 0.

Thanks to Arfrever Frehtes Taifersar Arahesis for filing the bug.